     erroneous textdomain declarations (bug #23839).
 * Lua API:
   * Added support for unit.level field (read only)
   * Added support for unit.advancements field (bug #23677)
   * Added support for current.event_context.unit_x/y fields (bug #23507)
   * Added wesnoth.set_dialog_focus function
   * Added wesnoth.set_dialog_visible function
   * Added wesnoth.random function
   * helper.shuffle is now synced
 * Music and sound effects:
   * New dwarf hit and die sounds.
 * Terrains:
   * Removed unit elevation from N-S hanging bridges
   * Added unit elevation to NW-SE and SW-NE stone chasm bridges
   * Added unit elevation to NW-SE and SW-NE plank bridges
   * Hanging, stone chasm, and plank bridges are now displayed in-game simply
     as "Bridge", retaining their descriptive names in the editor as per
     convention.
 * User interface:
   * GUI2:
     * stacked_widget can optionally display a single layer at a time. This
       may be used to implement dialogs with multiple pages or tabs.
     * Widgets which are children of invisible or hidden parents can no longer
       be interacted with even if the children themselves are still internally
       visible.
     * Added support for tristate buttons/toggle panels or more generally n-state buttons/toggle panels
   * Added a version dialog button to the title screen, replacing the Paths
     option previously found in Preferences -> General.
 * WML engine:
   * Added support for mod_x,mod_y= in [terrain_graphics].
   * Added support for has_flag= in terrain graphics [variant].
   * Added category= to [label] - allows grouping labels so that players can
     show/hide them
   * Add female_text= to [animate_unit] and [unstore_unit] for easier translating
   * AMLAs in [modifications] now use [advancement] tags instead of [advance] tags.
     This means you can add an AMLA to placed unit by simply using its definition macro,
     for example {AMLA_DEFAULT}.