@@ -32,6 +32,7 @@ int intf_set_dialog_active(lua_State *L);
 int intf_set_dialog_visible(lua_State *L);
 int intf_add_dialog_tree_node(lua_State *L);
 int show_dialog(lua_State *L, CVideo & video);
+int show_message_dialog(lua_State *L, CVideo & video);
 int show_lua_console(lua_State*L, CVideo & video, lua_kernel_base * lk);
 int show_gamestate_inspector(CVideo & video, const vconfig & cfg);
 int intf_remove_dialog_item(lua_State *L);
