@@ -30,6 +30,7 @@ Version 1.13.1+dev:
    * Added support for current.event_context.unit_x/y fields (bug #23507)
    * Added wesnoth.set_dialog_focus function
    * Added wesnoth.set_dialog_visible function
+   * Added wesnoth.show_message_dialog function
    * Added wesnoth.random function
    * helper.shuffle is now synced
  * Music and sound effects:
